added background and jump function

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type='text/javascript' src='script.js'></script>
 	
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 	</head>
 	<body>
-        <img src="http://i1061.photobucket.com/albums/t480/ericqweinstein/mario.jpg"/>
+        <span> <img src="mario_figure.png"> </span>
 	</body>
 </html>
 
