added goomba and fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
 	</head>
 	<body>
-        <span> <img src="mario_figure.png"> </span>
+	<span id="goomba"> <img src="goomba1.gif"> </span> 
+        <span id="mario"> <img src="mario_figure.png"> </span>
+	<span id="fireball" class="hidden"> <img src="fireo.png"> </span>		
+
+
+
 	</body>
 </html>
 
