made goomba move and replicated it 2 more times and fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 	</head>
 	<body>
-	<span id="goomba"> <img src="goomba1.gif"> </span> 
+	<span id="goomba1"> <img src="goomba1.gif"> </span>
+	<span id="goomba2"> <img src="goomba1.gif"> </span>
+	<span id="goomba3"> <img src="goomba1.gif"> </span>
+
+	<span id="question1"> <img src="question.gif"> </span> 
+	<span id="question2"> <img src="question.gif"> </span> 
+	<span id="question3"> <img src="question.gif"> </span> 
         <span id="mario"> <img src="mario_figure.png"> </span>
 	<span id="fireball" class="hidden"> <img src="fireo.png"> </span>		
 
