--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
 
 
+
+
+
+ <audio autoplay>
+  <source src="music.mp3" type="audio/mpeg" autostarts="true" loop="true" hidden="true">
+Your browser does not support the audio element.
+</audio> 
+
 	</body>
 </html>
 
